# GameToDoOverlay

./: README.md  __main__.py  config_manager.py  game_checklist_overlay.py  overlay_window.py  pyproject.toml  shortcut_manager.py  task_list_view.py  task_manager.py  task_parser.py
src/app/: task_list_view.py
src/task_list_overlay/: __main__.py  config_manager.py  overlay_window.py  shortcut_manager.py  task_parser.py
