[project]
name = "task_list_overlay"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4.4",
    "nltk>=3.9.1",
    "noise>=1.2.2",
    "pynput>=1.8.1",
    "pyside6>=6.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/task_list_overlay/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/task_list_overlay"]
